[gd_scene load_steps=9 format=3 uid="uid://cgwunn1kwgfjl"]

[ext_resource type="TileSet" uid="uid://ccawbuc7gu4ce" path="res://scenes/maps/empty_tiles.tres" id="1"]
[ext_resource type="TileSet" uid="uid://cy3tju0crpfa2" path="res://scenes/ground_tileset_v2.tres" id="2"]
[ext_resource type="TileSet" uid="uid://cr5qfm4i52k65" path="res://scenes/maps/map1_tile_set.tres" id="2_p37xk"]
[ext_resource type="TileSet" uid="uid://b7h0xx5g6a2ak" path="res://resources/textures/tiles/build_grid_tiles.tres" id="3"]
[ext_resource type="Script" path="res://scenes/maps/GameMap.gd" id="4"]
[ext_resource type="Script" path="res://scenes/maps/Base.gd" id="6"]

[sub_resource type="Curve2D" id="1"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -22, 590, 0, 0, 0, 0, 148, 588, 0, 0, 0, 0, 146, 556, 0, 0, 0, 0, 372, 555, 0, 0, 0, 0, 369, 461, 0, 0, 0, 0, 402, 459, 0, 0, 0, 0, 403, 368, 0, 0, 0, 0, 945, 369, 0, 0, 0, 0, 947, 428, 0, 0, 0, 0, 1052, 429, 0, 0, 0, 0, 1092, 430)
}
point_count = 11

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(51, 46)

[node name="GameMap" type="Node2D"]
script = ExtResource("4")

[node name="GroundLevel" type="TileMap" parent="."]
tile_set = ExtResource("2_p37xk")
format = 2
layer_0/tile_data = PackedInt32Array(0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 65536, 0, 31, 131072, 0, 65536, 131072, 2, 65537, 131072, 2, 65538, 131072, 2, 65539, 131072, 2, 65540, 131072, 2, 65541, 131072, 2, 65542, 131072, 2, 65543, 131072, 2, 65544, 131072, 2, 65545, 131072, 2, 65546, 131072, 2, 65547, 131072, 2, 65548, 131072, 2, 65549, 131072, 2, 65550, 131072, 2, 65551, 131072, 2, 65552, 131072, 2, 65553, 131072, 2, 65554, 131072, 2, 65555, 131072, 2, 65556, 0, 1, 65557, 0, 1, 65558, 0, 1, 65559, 0, 1, 65560, 0, 1, 65561, 0, 1, 65562, 0, 1, 65563, 0, 1, 65564, 0, 1, 65565, 0, 1, 65566, 65536, 1, 65567, 131072, 1, 131072, 131072, 2, 131073, 131072, 2, 131074, 131072, 2, 131075, 131072, 2, 131076, 131072, 2, 131077, 131072, 2, 131078, 131072, 2, 131079, 131072, 2, 131080, 131072, 2, 131081, 131072, 2, 131082, 131072, 2, 131083, 131072, 2, 131084, 131072, 2, 131085, 131072, 2, 131086, 131072, 2, 131087, 131072, 2, 131088, 131072, 2, 131089, 131072, 2, 131090, 131072, 2, 131091, 131072, 2, 131092, 131072, 2, 131093, 131072, 2, 131094, 131072, 2, 131095, 131072, 2, 131096, 131072, 2, 131097, 131072, 2, 131098, 131072, 2, 131099, 131072, 2, 131100, 131072, 2, 131101, 131072, 2, 131102, 131072, 2, 131103, 131072, 2, 196608, 131072, 2, 196609, 131072, 2, 196610, 131072, 2, 196611, 131072, 2, 196612, 131072, 2, 196613, 131072, 2, 196614, 131072, 2, 196615, 131072, 2, 196616, 131072, 2, 196617, 131072, 2, 196618, 131072, 2, 196619, 131072, 2, 196620, 131072, 2, 196621, 131072, 2, 196622, 131072, 2, 196623, 131072, 2, 196624, 131072, 2, 196625, 131072, 2, 196626, 131072, 2, 196627, 131072, 2, 196628, 131072, 2, 196629, 131072, 2, 196630, 131072, 2, 196631, 131072, 2, 196632, 131072, 2, 196633, 131072, 2, 196634, 131072, 2, 196635, 131072, 2, 196636, 131072, 2, 196637, 131072, 2, 196638, 131072, 2, 196639, 131072, 2, 262144, 131072, 2, 262145, 131072, 2, 262146, 131072, 2, 262147, 131072, 2, 262148, 131072, 2, 262149, 131072, 2, 262150, 131072, 2, 262151, 131072, 2, 262152, 131072, 2, 262153, 131072, 2, 262154, 131072, 2, 262155, 131072, 2, 262156, 131072, 2, 262157, 131072, 2, 262158, 131072, 2, 262159, 131072, 2, 262160, 131072, 2, 262161, 131072, 2, 262162, 131072, 2, 262163, 131072, 2, 262164, 131072, 2, 262165, 131072, 2, 262166, 131072, 2, 262167, 131072, 2, 262168, 131072, 2, 262169, 131072, 2, 262170, 131072, 2, 262171, 131072, 2, 262172, 131072, 2, 262173, 131072, 2, 262174, 131072, 2, 262175, 131072, 2, 327680, 131072, 2, 327681, 131072, 2, 327682, 131072, 2, 327683, 131072, 2, 327684, 131072, 2, 327685, 131072, 2, 327686, 131072, 2, 327687, 131072, 2, 327688, 131072, 2, 327689, 131072, 2, 327690, 131072, 2, 327691, 131072, 2, 327692, 131072, 2, 327693, 131072, 2, 327694, 131072, 2, 327695, 131072, 2, 327696, 131072, 2, 327697, 131072, 2, 327698, 131072, 2, 327699, 131072, 2, 327700, 131072, 2, 327701, 131072, 2, 327702, 131072, 2, 327703, 131072, 2, 327704, 131072, 2, 327705, 131072, 2, 327706, 131072, 2, 327707, 131072, 2, 327708, 131072, 2, 327709, 131072, 2, 327710, 131072, 2, 327711, 131072, 2, 393216, 131072, 2, 393217, 131072, 2, 393218, 131072, 2, 393219, 131072, 2, 393220, 131072, 2, 393221, 131072, 2, 393222, 131072, 2, 393223, 131072, 2, 393224, 131072, 2, 393225, 131072, 2, 393226, 131072, 2, 393227, 131072, 2, 393228, 131072, 2, 393229, 131072, 2, 393230, 131072, 2, 393231, 131072, 2, 393232, 131072, 2, 393233, 131072, 2, 393234, 131072, 2, 393235, 131072, 2, 393236, 131072, 2, 393237, 131072, 2, 393238, 131072, 2, 393239, 131072, 2, 393240, 131072, 2, 393241, 131072, 2, 393242, 131072, 2, 393243, 131072, 2, 393244, 131072, 2, 393245, 131072, 2, 393246, 131072, 2, 393247, 131072, 2, 458752, 131072, 2, 458753, 131072, 2, 458754, 131072, 2, 458755, 131072, 2, 458756, 131072, 2, 458757, 131072, 2, 458758, 131072, 2, 458759, 131072, 2, 458760, 131072, 2, 458761, 131072, 2, 458762, 131072, 2, 458763, 131072, 2, 458764, 131072, 2, 458765, 131072, 2, 458766, 131072, 2, 458767, 131072, 2, 458768, 131072, 2, 458769, 131072, 2, 458770, 131072, 2, 458771, 131072, 2, 458772, 131072, 2, 458773, 131072, 2, 458774, 131072, 2, 458775, 131072, 2, 458776, 131072, 2, 458777, 131072, 2, 458778, 131072, 2, 458779, 131072, 2, 458780, 131072, 2, 458781, 131072, 2, 458782, 131072, 2, 458783, 131072, 2, 524288, 131072, 2, 524289, 131072, 2, 524290, 131072, 2, 524291, 131072, 2, 524292, 131072, 2, 524293, 131072, 2, 524294, 131072, 2, 524295, 131072, 2, 524296, 131072, 2, 524297, 131072, 2, 524298, 131072, 2, 524299, 131072, 2, 524300, 131072, 2, 524301, 131072, 2, 524302, 131072, 2, 524303, 131072, 2, 524304, 131072, 2, 524305, 131072, 2, 524306, 131072, 2, 524307, 131072, 2, 524308, 131072, 2, 524309, 131072, 2, 524310, 131072, 2, 524311, 131072, 2, 524312, 131072, 2, 524313, 131072, 2, 524314, 131072, 2, 524315, 131072, 2, 524316, 131072, 2, 524317, 131072, 2, 524318, 131072, 2, 524319, 131072, 2, 524320, 131072, 2, 589824, 131072, 2, 589825, 131072, 2, 589826, 131072, 2, 589827, 131072, 2, 589828, 131072, 2, 589829, 131072, 2, 589830, 131072, 2, 589831, 131072, 2, 589832, 131072, 2, 589833, 131072, 2, 589834, 131072, 2, 589835, 131072, 2, 589836, 131072, 2, 589837, 131072, 2, 589838, 131072, 2, 589839, 131072, 2, 589840, 131072, 2, 589841, 131072, 2, 589842, 131072, 2, 589843, 131072, 2, 589844, 131072, 2, 589845, 131072, 2, 589846, 131072, 2, 589847, 131072, 2, 589848, 131072, 2, 589849, 131072, 2, 589850, 131072, 2, 589851, 131072, 2, 589852, 131072, 2, 589853, 131072, 2, 589854, 131072, 2, 589855, 131072, 2, 589856, 131072, 2, 655360, 131072, 2, 655361, 131072, 2, 655362, 131072, 2, 655363, 131072, 2, 655364, 131072, 2, 655365, 131072, 2, 655366, 131072, 2, 655367, 131072, 2, 655368, 131072, 2, 655369, 131072, 2, 655370, 131072, 2, 655371, 131072, 2, 655372, 131072, 2, 655373, 131072, 2, 655374, 131072, 2, 655375, 131072, 2, 655376, 131072, 2, 655377, 131072, 2, 655378, 131072, 2, 655379, 131072, 2, 655380, 131072, 2, 655381, 131072, 2, 655382, 131072, 2, 655383, 131072, 2, 655384, 131072, 2, 655385, 131072, 2, 655386, 131072, 2, 655387, 131072, 2, 655388, 131072, 2, 655389, 131072, 2, 655390, 131072, 2, 655391, 131072, 2, 655392, 131072, 2, 720896, 131072, 2, 720897, 131072, 2, 720898, 131072, 2, 720899, 131072, 2, 720900, 131072, 2, 720901, 131072, 2, 720902, 131072, 2, 720903, 131072, 2, 720904, 131072, 2, 720905, 131072, 2, 720906, 131072, 2, 720907, 131072, 2, 720908, 131072, 2, 720909, 131072, 2, 720910, 131072, 2, 720911, 131072, 2, 720912, 131072, 2, 720913, 131072, 2, 720914, 131072, 2, 720915, 131072, 2, 720916, 131072, 2, 720917, 131072, 2, 720918, 131072, 2, 720919, 131072, 2, 720920, 131072, 2, 720921, 131072, 2, 720922, 131072, 2, 720923, 131072, 2, 720924, 131072, 2, 720925, 131072, 2, 720926, 131072, 2, 720927, 131072, 2, 720928, 131072, 2, 786432, 65536, 2, 786433, 131072, 2, 786434, 131072, 2, 786435, 131072, 2, 786436, 131072, 2, 786437, 131072, 2, 786438, 131072, 2, 786439, 131072, 2, 786440, 131072, 2, 786441, 131072, 2, 786442, 131072, 2, 786443, 131072, 2, 786444, 131072, 2, 786445, 131072, 2, 786446, 131072, 2, 786447, 131072, 2, 786448, 131072, 2, 786449, 131072, 2, 786450, 131072, 2, 786451, 131072, 2, 786452, 131072, 2, 786453, 131072, 2, 786454, 131072, 2, 786455, 131072, 2, 786456, 131072, 2, 786457, 131072, 2, 786458, 131072, 2, 786459, 131072, 2, 786460, 131072, 2, 786461, 131072, 2, 786462, 131072, 2, 786463, 131072, 2, 786464, 131072, 2, 851968, 131072, 2, 851969, 131072, 2, 851970, 131072, 2, 851971, 131072, 2, 851972, 131072, 2, 851973, 131072, 2, 851974, 131072, 2, 851975, 131072, 2, 851976, 131072, 2, 851977, 131072, 2, 851978, 131072, 2, 851979, 131072, 2, 851980, 131072, 2, 851981, 131072, 2, 851982, 131072, 2, 851983, 131072, 2, 851984, 131072, 2, 851985, 131072, 2, 851986, 131072, 2, 851987, 131072, 2, 851988, 131072, 2, 851989, 131072, 2, 851990, 131072, 2, 851991, 131072, 2, 851992, 131072, 2, 851993, 131072, 2, 851994, 131072, 2, 851995, 131072, 2, 851996, 131072, 2, 851997, 131072, 2, 851998, 131072, 2, 851999, 131072, 2, 852000, 131072, 2, 917504, 131072, 2, 917505, 131072, 2, 917506, 131072, 2, 917507, 131072, 2, 917508, 131072, 2, 917509, 131072, 2, 917510, 131072, 2, 917511, 131072, 2, 917512, 131072, 2, 917513, 131072, 2, 917514, 131072, 2, 917515, 131072, 2, 917516, 131072, 2, 917517, 131072, 2, 917518, 131072, 2, 917519, 131072, 2, 917520, 131072, 2, 917521, 131072, 2, 917522, 131072, 2, 917523, 131072, 2, 917524, 131072, 2, 917525, 131072, 2, 917526, 131072, 2, 917527, 131072, 2, 917528, 131072, 2, 917529, 131072, 2, 917530, 131072, 2, 917531, 131072, 2, 917532, 131072, 2, 917533, 131072, 2, 917534, 131072, 2, 917535, 131072, 2, 917536, 131072, 2, 983040, 131072, 2, 983041, 131072, 2, 983042, 131072, 2, 983043, 131072, 2, 983044, 131072, 2, 983045, 131072, 2, 983046, 131072, 2, 983047, 131072, 2, 983048, 131072, 2, 983049, 131072, 2, 983050, 131072, 2, 983051, 131072, 2, 983052, 131072, 2, 983053, 131072, 2, 983054, 131072, 2, 983055, 131072, 2, 983056, 131072, 2, 983057, 131072, 2, 983058, 131072, 2, 983059, 131072, 2, 983060, 131072, 2, 983061, 131072, 2, 983062, 131072, 2, 983063, 131072, 2, 983064, 131072, 2, 983065, 131072, 2, 983066, 131072, 2, 983067, 131072, 2, 983068, 131072, 2, 983069, 131072, 2, 983070, 131072, 2, 983071, 131072, 2, 983072, 131072, 2, 983073, 131072, 2, 1048576, 131072, 2, 1048577, 131072, 2, 1048578, 131072, 2, 1048579, 131072, 2, 1048580, 131072, 2, 1048581, 131072, 2, 1048582, 131072, 2, 1048583, 131072, 2, 1048584, 131072, 2, 1048585, 131072, 2, 1048586, 131072, 2, 1048587, 131072, 2, 1048588, 131072, 2, 1048589, 131072, 2, 1048590, 131072, 2, 1048591, 131072, 2, 1048592, 131072, 2, 1048593, 131072, 2, 1048594, 131072, 2, 1048595, 131072, 2, 1048596, 131072, 2, 1048597, 131072, 2, 1048598, 131072, 2, 1048599, 131072, 2, 1048600, 131072, 2, 1048601, 131072, 2, 1048602, 131072, 2, 1048603, 131072, 2, 1048604, 131072, 2, 1048605, 131072, 2, 1048606, 131072, 2, 1048607, 131072, 2, 1048608, 131072, 2, 1114112, 131072, 2, 1114113, 131072, 2, 1114114, 131072, 2, 1114115, 131072, 2, 1114116, 131072, 2, 1114117, 131072, 2, 1114118, 131072, 2, 1114119, 131072, 2, 1114120, 131072, 2, 1114121, 131072, 2, 1114122, 131072, 2, 1114123, 131072, 2, 1114124, 131072, 2, 1114125, 131072, 2, 1114126, 131072, 2, 1114127, 131072, 2, 1114128, 131072, 2, 1114129, 131072, 2, 1114130, 131072, 2, 1114131, 131072, 2, 1114132, 131072, 2, 1114133, 131072, 2, 1114134, 131072, 2, 1114135, 131072, 2, 1114136, 131072, 2, 1114137, 131072, 2, 1114138, 131072, 2, 1114139, 131072, 2, 1114140, 131072, 2, 1114141, 131072, 2, 1114142, 131072, 2, 1114143, 131072, 2, 1114144, 131072, 2, 1245183, 131072, 2, 1179648, 131072, 2, 1179649, 131072, 2, 1179650, 131072, 2, 1179651, 131072, 2, 1179652, 131072, 2, 1179653, 131072, 2, 1179654, 131072, 2, 1179655, 131072, 2, 1179656, 131072, 2, 1179657, 131072, 2, 1179658, 131072, 2, 1179659, 131072, 2, 1179660, 131072, 2, 1179661, 131072, 2, 1179662, 131072, 2, 1179663, 131072, 2, 1179664, 131072, 2, 1179665, 131072, 2, 1179666, 131072, 2, 1179667, 131072, 2, 1179668, 131072, 2, 1179669, 131072, 2, 1179670, 131072, 2, 1179671, 131072, 2, 1179672, 131072, 2, 1179673, 131072, 2, 1179674, 131072, 2, 1179675, 131072, 2, 1179676, 131072, 2, 1179677, 131072, 2, 1179678, 131072, 2, 1179679, 131072, 2, 1179680, 131072, 2, 1245184, 131072, 2, 1245185, 131072, 2, 1245186, 131072, 2, 1245187, 131072, 2, 1245188, 131072, 2, 1245189, 131072, 2, 1245190, 131072, 2, 1245191, 131072, 2, 1245192, 131072, 2, 1245193, 131072, 2, 1245194, 131072, 2, 1245195, 131072, 2, 1245196, 131072, 2, 1245197, 131072, 2, 1245198, 131072, 2, 1245199, 131072, 2, 1245200, 131072, 2, 1245201, 131072, 2, 1245202, 131072, 2, 1245203, 131072, 2, 1245204, 131072, 2, 1245205, 131072, 2, 1245206, 131072, 2, 1245207, 131072, 2, 1245208, 131072, 2, 1245209, 131072, 2, 1245210, 131072, 2, 1245211, 131072, 2, 1245212, 131072, 2, 1245213, 131072, 2, 1245214, 131072, 2, 1245215, 131072, 2, 1310720, 131072, 2, 1310721, 131072, 2, 1310722, 131072, 2, 1310723, 131072, 2, 1310724, 131072, 2, 1310725, 131072, 2, 1310726, 131072, 2, 1310727, 131072, 2, 1310728, 131072, 2, 1310729, 131072, 2, 1310730, 131072, 2, 1310731, 131072, 2, 1310732, 131072, 2, 1310733, 131072, 2, 1310734, 131072, 2, 1310735, 131072, 2, 1310736, 131072, 2, 1310737, 131072, 2, 1310738, 131072, 2, 1310739, 131072, 2, 1310740, 131072, 2, 1310741, 131072, 2, 1310742, 131072, 2, 1310743, 131072, 2, 1310744, 131072, 2, 1310745, 131072, 2, 1310746, 131072, 2, 1310747, 131072, 2, 1310748, 131072, 2, 1310749, 131072, 2, 1310750, 131072, 2, 1310751, 131072, 2, 1376256, 131072, 2, 1376257, 131072, 2, 1376258, 131072, 2, 1376259, 131072, 2, 1376260, 131072, 2, 1376261, 131072, 2, 1376262, 131072, 2, 1376263, 131072, 2, 1376264, 131072, 2, 1376265, 131072, 2, 1376266, 131072, 2, 1376267, 131072, 2, 1376268, 131072, 2, 1376269, 131072, 2, 1376270, 131072, 2, 1376271, 131072, 2, 1376272, 131072, 2, 1376273, 131072, 2, 1376274, 131072, 2, 1376275, 131072, 2, 1376276, 131072, 2, 1376277, 131072, 2, 1376278, 131072, 2, 1376279, 131072, 2, 1376280, 131072, 2, 1376281, 131072, 2, 1376282, 131072, 2, 1376283, 131072, 2, 1376284, 131072, 2, 1376285, 131072, 2, 1376286, 131072, 2, 1376287, 131072, 2, 1114111, 131072, 2, 1048575, 131072, 2, 983039, 131072, 2, 917503, 131072, 2, 851967, 131072, 2, 786431, 131072, 2, 720895, 131072, 2, 655359, 131072, 2, 589823, 131072, 2, 524287, 131072, 2, 458751, 131072, 2, 393215, 131072, 2, 327679, 131072, 2, 262143, 131072, 2, 196607, 131072, 2, 131071, 131072, 2, 65535, 131072, 2, 1179647, 131072, 2, 393248, 131072, 2, 327712, 131072, 2, 262176, 131072, 2, 196640, 131072, 2, 131104, 131072, 2, 65568, 131072, 2, 32, 131072, 2, 33, 131072, 2, 65569, 131072, 2, 131105, 131072, 2, 196641, 131072, 2, 262177, 131072, 2, 327713, 131072, 2, 393249, 131072, 2, 458785, 131072, 2, 458784, 131072, 2, 524321, 131072, 2, 589857, 131072, 2, 655393, 131072, 2, 720929, 131072, 2, 786465, 131072, 2, 852001, 131072, 2, 917537, 131072, 2)

[node name="RoadLevel" type="TileMap" parent="."]
tile_set = ExtResource("2")
format = 2
layer_0/tile_data = PackedInt32Array(720908, 4, 1, 720909, 65540, 1, 720910, 65540, 1, 720911, 4, 3, 720912, 131076, 3, 720913, 131076, 3, 720914, 131076, 2, 720915, 65540, 1, 720916, 65540, 1, 720917, 65540, 1, 720918, 65540, 1, 720919, 65540, 1, 720920, 65540, 1, 720921, 65540, 1, 720922, 65540, 1, 720923, 65540, 1, 720924, 65540, 1, 720925, 262148, 2, 786444, 4, 2, 786461, 4, 2, 851980, 4, 2, 851997, 196612, 0, 851998, 65540, 1, 851999, 65540, 1, 852000, 65540, 1, 917515, 4, 1, 917516, 262148, 0, 983051, 4, 2, 1048587, 262148, 1, 1048588, 4, 3, 1114116, 4, 1, 1114117, 65540, 1, 1114118, 65540, 1, 1114119, 65540, 1, 1114120, 131076, 1, 1114121, 65540, 1, 1114122, 65540, 1, 1114123, 262148, 0, 1179648, 65540, 1, 1179649, 65540, 1, 1179650, 65540, 1, 1179651, 65540, 1, 1179652, 262148, 0, 1179656, 4, 2)

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(-3, 3)
curve = SubResource("1")

[node name="ConstructionsLayer" type="TileMap" parent="."]
tile_set = ExtResource("1")
format = 2

[node name="BuildingGrid" type="TileMap" parent="."]
visible = false
tile_set = ExtResource("3")
format = 2
layer_0/tile_data = PackedInt32Array(0, 65536, 0, 1, 65536, 0, 2, 65536, 0, 3, 65536, 0, 4, 65536, 0, 5, 65536, 0, 6, 65536, 0, 7, 65536, 0, 8, 65536, 0, 9, 65536, 0, 10, 65536, 0, 11, 65536, 0, 12, 65536, 0, 13, 65536, 0, 14, 65536, 0, 15, 65536, 0, 65536, 65536, 0, 65537, 65536, 0, 65538, 65536, 0, 65539, 65536, 0, 65540, 65536, 0, 65541, 65536, 0, 65542, 65536, 0, 65543, 65536, 0, 65544, 65536, 0, 65545, 65536, 0, 65546, 65536, 0, 65547, 65536, 0, 65548, 65536, 0, 65549, 65536, 0, 65550, 65536, 0, 65551, 65536, 0, 131072, 65536, 0, 131073, 65536, 0, 131074, 65536, 0, 131075, 65536, 0, 131076, 65536, 0, 131077, 0, 0, 131078, 65536, 0, 131079, 65536, 0, 131080, 65536, 0, 131081, 65536, 0, 131082, 65536, 0, 131083, 65536, 0, 131084, 65536, 0, 131085, 65536, 0, 131086, 0, 0, 131087, 65536, 0, 196608, 65536, 0, 196609, 65536, 0, 196610, 65536, 0, 196611, 65536, 0, 196612, 65536, 0, 196613, 65536, 0, 196614, 65536, 0, 196615, 65536, 0, 196617, 65536, 0, 196621, 65536, 0, 196622, 65536, 0, 196623, 65536, 0, 262144, 65536, 0, 262145, 65536, 0, 262146, 65536, 0, 262147, 65536, 0, 262148, 65536, 0, 262149, 65536, 0, 262150, 65536, 0, 262151, 65536, 0, 262152, 65536, 0, 262153, 65536, 0, 262157, 65536, 0, 262158, 65536, 0, 262159, 65536, 0, 327680, 65536, 0, 327681, 65536, 0, 327682, 65536, 0, 327683, 65536, 0, 327684, 0, 0, 327685, 65536, 0, 327686, 65536, 0, 327687, 65536, 0, 327688, 65536, 0, 327689, 65536, 0, 327693, 65536, 0, 327694, 65536, 0, 327695, 65536, 0, 393216, 65536, 0, 393217, 65536, 0, 393218, 65536, 0, 393219, 65536, 0, 393220, 65536, 0, 393221, 65536, 0, 393222, 65536, 0, 393223, 65536, 0, 393224, 65536, 0, 393225, 65536, 0, 393226, 65536, 0, 393227, 65536, 0, 393228, 65536, 0, 393229, 65536, 0, 393230, 65536, 0, 393231, 65536, 0, 458752, 65536, 0, 458753, 65536, 0, 458754, 0, 0, 458755, 65536, 0, 458756, 65536, 0, 458757, 65536, 0, 458758, 65536, 0, 458759, 65536, 0, 458760, 0, 0, 458761, 65536, 0, 458762, 0, 0, 458763, 65536, 0, 458764, 65536, 0, 458765, 65536, 0, 458766, 65536, 0, 458767, 65536, 0, 524288, 65536, 0, 524289, 65536, 0, 524290, 65536, 0, 524291, 65536, 0, 524292, 65536, 0, 524293, 65536, 0, 524294, 65536, 0, 524295, 65536, 0, 524296, 65536, 0, 524297, 65536, 0, 524298, 65536, 0, 524299, 65536, 0, 524300, 65536, 0, 524301, 65536, 0, 524302, 65536, 0, 524303, 65536, 0, 589824, 65536, 0, 589825, 65536, 0, 589826, 65536, 0, 589827, 65536, 0, 589828, 65536, 0, 589829, 65536, 0, 589830, 65536, 0, 589831, 65536, 0, 589832, 65536, 0, 589833, 65536, 0, 589834, 65536, 0, 589835, 65536, 0, 589836, 65536, 0, 589837, 65536, 0, 589838, 65536, 0, 589839, 65536, 0, 655360, 65536, 0, 655361, 65536, 0, 655362, 65536, 0, 655363, 65536, 0, 655364, 65536, 0, 655365, 65536, 0, 655366, 65536, 0, 655367, 65536, 0, 655368, 65536, 0, 655369, 65536, 0, 655370, 65536, 0, 655371, 65536, 0, 655372, 65536, 0, 655373, 65536, 0, 655374, 65536, 0, 655375, 65536, 0, 196616, 65536, 0, 262155, 0, 0, 327690, 65536, 0, 262154, 65536, 0, 196618, 65536, 0, 196619, 65536, 0, 196620, 65536, 0, 262156, 65536, 0, 327692, 65536, 0, 327691, 65536, 0)

[node name="BaseArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BaseArea"]
position = Vector2(1080.5, 432)
shape = SubResource("2")

[node name="WaveDelayTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="timeout" from="WaveDelayTimer" to="." method="_on_WaveDelayTimer_timeout"]
